# DigiPaper-misis2023-kiselev-k-a

./: CMakeLists.txt  README.md  codeforces.id  status.md
docs/: report.md
prj.codeforces/: 0939a.cpp  1283b  1731a.cpp  1731b  1731c  1809a.cpp  1851a.cpp  1851b  1851c.cpp  1868a.cpp  1869a  1879a  1881d  1896b  1896d.cpp  1899a.cpp  1899b.cpp  1899c  1899d  1903c.cpp  1914b.cpp  1915a  1915b.cpp  1915d  1915e.cpp  1916a.cpp  1916b.cpp  1919a.cpp  1919b  1919c  CMakeLists.txt
prj.cw/: CMakeLists.txt
prj.cw/digi_paper/: CMakeLists.txt
prj.cw/digi_paper/prj.lib/: CMakeLists.txt  digi_paper.cpp
prj.cw/digi_paper/prj.lib/include/digiPaper/: digi_paper.hpp
prj.cw/digi_paper/prj.test/: CMakeLists.txt  digi_paper.test.cpp
