add_executable(0939a 0939a.cpp)
add_executable(1283b 1283b.cpp)
add_executable(1731a 1731a.cpp)
add_executable(1731b 1731b.cpp)
add_executable(1731c 1731c.cpp)
add_executable(1809a 1809a.cpp)
add_executable(1851a 1851a.cpp)
add_executable(1851b 1851b.cpp)
add_executable(1851c 1851c.cpp)
add_executable(1868a 1868a.cpp)
add_executable(1869a 1869a.cpp)
add_executable(1879a 1879a.cpp)
add_executable(1881d 1881d.cpp)
add_executable(1896b 1896b.cpp)
add_executable(1896d 1896d.cpp)
add_executable(1899a 1899a.cpp)
add_executable(1899b 1899b.cpp)
add_executable(1899c 1899c.cpp)
add_executable(1899d 1899d.cpp)
add_executable(1903c 1903c.cpp)
add_executable(1914b 1914b.cpp)
add_executable(1915a 1915a.cpp)
add_executable(1915b 1915b.cpp)
add_executable(1915d 1915d.cpp)
add_executable(1915e 1915e.cpp)
add_executable(1916a 1916a.cpp)
add_executable(1916b 1916b.cpp)
add_executable(1919a 1991a.cpp)
add_executable(1919b 1919b.cpp)
add_executable(1919c 1919c.cpp)
