cmake_minimum_required (VERSION 3.8)


set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_SOURCE_DIR}/bin.dbg)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_SOURCE_DIR}/bin.rel)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_CURRENT_SOURCE_DIR}/bin.relwithdbg)

add_subdirectory(prj.lib)
add_subdirectory(prj.test)


find_package(Eigen3 CONFIG REQUIRED)
find_package(Eigen3)
INCLUDE_DIRECTORIES("${EIGEN3_INCLUDE_DIR}")

  
